--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "country-flag-emoji-polyfill",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Add country flag emojis to Chromium-based browsers on Windows",
   "repository": "https://github.com/talkjs/country-flag-emoji-polyfill",
   "author": "Egbert Teeselink",
@@ -19,7 +19,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "microbundle --no-compress",
+    "build": "microbundle",
     "dev": "microbundle watch",
     "make-font": "cd build && ./make-font.sh"
   },
