--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   ],
   "scripts": {
     "build": "unbuild --minify",
+    "dev": "nodemon -w src -e ts -x 'npm run build'",
     "make-font": "cd build && ./make-font.sh"
   },
   "devDependencies": {
+    "nodemon": "^3.0.2",
     "unbuild": "^2.0.0"
   }
 }
